--- a/package.json
+++ b/package.json
@@ -50,8 +50,6 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "pino": "^9.9.5",
-    "pino-pretty": "^13.1.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -83,6 +81,8 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "pino": "^9.9.5",
+    "pino-pretty": "^13.1.1"
   }
 }
