--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.9",
+    "pino": "^9.9.5",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
-    "pino": "^9.9.5",
-    "pino-pretty": "^13.1.1"
+    "sharp": "^0.34.3"
   }
 }
