--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
     "pino": "^9.9.5",
     "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.3",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
-    "sharp": "^0.34.3"
+    "vite-plugin-image-optimizer": "^2.0.2"
   }
 }
