--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run fetch-data",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "fetch-data": "node scripts/fetch-officers.js",
+    "fetch-data": "node scripts/fetch-officers-fa25.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
