--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prebuild": "npm run fetch-data",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "fetch-data": "node scripts/fetch-officers-fa25.js",
+    "fetch-data": "node scripts/fetch-officers-fa25.js && node scripts/fetch-officers-notion.js",
+    "fetch-fa25": "node scripts/fetch-officers-fa25.js",
+    "fetch-notion": "node scripts/fetch-officers-notion.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -68,12 +70,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@notionhq/client": "^2.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.4",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
