--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,9 @@ jobs:
         run: npm ci
       - name: Build
         run: npm run build
+        env:
+          NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+          NOTION_OFFICERS_DB_ID: ${{ secrets.NOTION_OFFICERS_DB_ID }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
