--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
-    "vite-plugin-image-optimizer": "^2.0.2"
+    "vite-plugin-image-optimizer": "^2.0.2",
+    "vite-plugin-radar": "^0.10.1"
   }
 }
